--- a/features.html
+++ b/features.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First  Hosted website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="features.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
             </p>
             </div>
     
-                <img src="C:\Users\hp\Desktop\company.jpg" alt="image">
+                <img src="pictures\company.jpg" alt="image">
         </div>
     </section>
     
@@ -47,7 +47,7 @@
                     that seperates me from others.
                 </p>
             </div>
-            <img src="C:\Users\hp\Desktop\illustration.png" alt="image">
+            <img src="pictures\illustration.png" alt="image">
         </div>
     </section>
 
