--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <section class="cli">
         <div class="container grid">
-            <img src="C:\Users\hp\Downloads\laptop-img.jpg" alt="image" height="180px">
+            <img src="pictures\laptop-img.jpg" alt="image" height="180px">
             <div class="card">
                 <h3>Skilled and Efficient.</h3>
             </div>
@@ -115,7 +115,7 @@
             </p>
             <a href="features.html" class="btn btn-dark"> Read More</a>
         </div>
-        <img src="C:\Users\hp\Desktop\laptop.jpg" alt="image">
+        <img src="pictures\laptop.jpg" alt="image">
     </div>
 </section>
 
@@ -127,31 +127,31 @@
     <div class="container flex">
         <div class="card">
             <h4>Asia</h4>
-            <img src="C:\Users\hp\Downloads\asian.png" height="30px">
+            <img src="pictures\asian.png" height="30px">
         </div>
         <div class="card">
             <h4>Africa</h4>
-            <img src="C:\Users\hp\Downloads\africa.jpg" height="30px">
+            <img src="pictures\africa.jpg" height="30px">
         </div>
         <div class="card">
             <h4>North America</h4>
-            <img src="C:\Users\hp\Downloads\north america.png" height="30px">
+            <img src="pictures\north america.png" height="30px">
         </div>
         <div class="card">
             <h4>Europe</h4>
-            <img src="C:\Users\hp\Downloads\europe.jpg" height="30px">
+            <img src="pictures\europe.jpg" height="30px">
         </div>
         <div class="card">
             <h4>South America</h4>
-            <img src="C:\Users\hp\Downloads\south america.jpg" height="30px">
+            <img src="pictures\south america.jpg" height="30px">
         </div>
         <div class="card">
             <h4>Antarctica</h4>
-            <img src="C:\Users\hp\Downloads\antarctica.jpg" height="30px">
+            <img src="pictures\antarctica.jpg" height="30px">
         </div>
         <div class="card">
             <h4>Oceania</h4>
-            <img src="C:\Users\hp\Downloads\oceania.png" height="30px">
+            <img src="pictures\oceania.png" height="30px">
         </div>
     </div>
 </section>
